# CSCI4320-Project

./: .gitignore  CMakeLists.txt  Makefile  a.out  graph-cuda.cu  main.cpp
aimos/: analyze.py  run.py
aimos-stats/collection1/output/vote-gen-1000-500/: vote-gen-1-16-1000-500.txt  vote-gen-1-2-1000-500.txt  vote-gen-1-8-1000-500.txt  vote-gen-11-32-1000-500.txt  vote-gen-13-32-1000-500.txt  vote-gen-2-24-1000-500.txt  vote-gen-2-32-1000-500.txt  vote-gen-3-32-1000-500.txt  vote-gen-6-32-1000-500.txt  vote-gen-8-32-1000-500.txt  vote-gen-9-32-1000-500.txt
aimos-stats/collection1/output/vote-gen-1000-5000/: vote-gen-1-1-1000-5000.txt  vote-gen-1-16-1000-5000.txt  vote-gen-11-32-1000-5000.txt  vote-gen-15-32-1000-5000.txt  vote-gen-16-32-1000-5000.txt  vote-gen-2-24-1000-5000.txt  vote-gen-2-32-1000-5000.txt  vote-gen-4-32-1000-5000.txt  vote-gen-6-32-1000-5000.txt  vote-gen-7-32-1000-5000.txt
aimos-stats/collection1/output/vote-gen-1000-50000/: vote-gen-1-16-1000-50000.txt  (+8 more)
aimos-stats/vote-gen-1000-500/: vote-gen-1-1-1000-500.txt  vote-gen-1-32-1000-500.txt  vote-gen-1-4-1000-500.txt  vote-gen-10-32-1000-500.txt  vote-gen-16-32-1000-500.txt  vote-gen-4-32-1000-500.txt  vote-gen-5-32-1000-500.txt  vote-gen-7-32-1000-500.txt
aimos-stats/vote-gen-1000-5000/: vote-gen-1-2-1000-5000.txt  vote-gen-1-32-1000-5000.txt  vote-gen-1-4-1000-5000.txt  vote-gen-1-8-1000-5000.txt  vote-gen-10-32-1000-5000.txt  vote-gen-12-32-1000-5000.txt  vote-gen-13-32-1000-5000.txt  vote-gen-3-32-1000-5000.txt  vote-gen-5-32-1000-5000.txt  vote-gen-8-32-1000-5000.txt  vote-gen-9-32-1000-5000.txt
aimos-stats/vote-gen-1000-50000/: vote-gen-1-1-1000-50000.txt  vote-gen-1-32-1000-50000.txt  vote-gen-1-8-1000-50000.txt  vote-gen-10-32-1000-50000.txt  vote-gen-11-32-1000-50000.txt  vote-gen-12-32-1000-50000.txt  vote-gen-13-32-1000-50000.txt  vote-gen-2-24-1000-50000.txt  vote-gen-2-32-1000-50000.txt  vote-gen-5-32-1000-50000.txt  vote-gen-7-32-1000-50000.txt  vote-gen-9-32-1000-50000.txt
aimos-stats/vote-gen-10000-20/: vote-gen-1-1-10000-20.txt  vote-gen-1-16-10000-20.txt  vote-gen-1-8-10000-20.txt  vote-gen-10-32-10000-20.txt  vote-gen-15-32-10000-20.txt  vote-gen-3-32-10000-20.txt  vote-gen-4-32-10000-20.txt  vote-gen-9-32-10000-20.txt
aimos-stats/vote-gen-1000000-20/: vote-gen-1-1-1000000-20.txt  vote-gen-1-2-1000000-20.txt  vote-gen-1-32-1000000-20.txt  vote-gen-1-8-1000000-20.txt  vote-gen-10-32-1000000-20.txt  vote-gen-2-32-1000000-20.txt  vote-gen-3-32-1000000-20.txt  vote-gen-6-32-1000000-20.txt
aimos-stats/vote-gen-10000000-20/: vote-gen-1-32-10000000-20.txt  vote-gen-1-8-10000000-20.txt  vote-gen-13-32-10000000-20.txt  vote-gen-16-32-10000000-20.txt  vote-gen-2-24-10000000-20.txt  vote-gen-5-32-10000000-20.txt  vote-gen-8-32-10000000-20.txt
aimos-stats/vote-gen-100000000-20/: vote-gen-10-32-100000000-20.txt  vote-gen-12-32-100000000-20.txt  vote-gen-14-32-100000000-20.txt  vote-gen-16-32-100000000-20.txt  vote-gen-2-32-100000000-20.txt  vote-gen-3-32-100000000-20.txt  vote-gen-4-32-100000000-20.txt  vote-gen-6-32-100000000-20.txt
aimos-stats/vote-gen-50000000-20/: vote-gen-11-32-50000000-20.txt  vote-gen-16-32-50000000-20.txt  vote-gen-2-24-50000000-20.txt  vote-gen-3-32-50000000-20.txt  vote-gen-4-32-50000000-20.txt  vote-gen-7-32-50000000-20.txt  vote-gen-8-32-50000000-20.txt
aimos/batch/: batch-vote-algo.sh  batch-vote-gen.sh
common/: common.h  mpi_type.h
generate/: Makefile
generate/src/graph/: main.cpp
generate/src/vote/: main.cpp
graph_algos/: Makefile  graph_algo.out
graph_algos/src/: celeb.cpp  vote.cpp
graph_gen/: Makefile  data.txt  graph_gen.out  main.cpp
graph_gen/src/: graph-cuda.cu
report/: report.tex
src/: Makefile
src/celeb/: celeb.cpp
src/common/: common.h  mpi-extra.h
src/crypto/: crypto.cpp  crypto.h  cryptocommon.h  cryptompi.cpp  cryptompi.h  cryptotest.cpp  ctrmode.cpp  ctrmode.h  rijndael.cpp  rijndael.h  sha1.cpp  sha1.h
src/graph/: graph-gen.cpp
src/probability/: custom.cpp  custom.h  distribution.cpp  distribution.h  fullbias.cpp  fullbias.h  probability.h  uniform.cpp  uniform.h
src/vote/: vote-algo.cpp  vote-gen-encryption.cpp  vote-gen.cpp
(+2233 files in other folders)
